testsuite/escript/errors/errors004-program-parameter-same-name-as-function.src
// reported in https://forums.polserver.com/viewtopic.php?f=54&t=6140
program foo( print )

endprogram
